# ncu-practice

./: .gitignore  CMakeLists.txt  README.md
case1/: CMakeLists.txt  case1.cu
cmake/: Apps.cmake
docs/: metrics.md
include/: cuda_wrapper.h
test_cases/: CMakeLists.txt  case_atomics.cu  case_img_sum_shmem.cu  case_img_sum_texture.cu
